Fix display font size and file spacing

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,8 @@ main {
   width: 100%;
   height: 100%;
   text-align: right;
-  font-size: 4.5rem;
+  font-family: Roboto Mono, monospace;
+  font-size: 4.3rem;
   padding: 0.1em;
 }
 
@@ -160,3 +161,5 @@ main {
   grid-row: 4/span 2;
   border-radius: 1em;
 }
+
+/*# sourceMappingURL=style.css.map */
